Fix layout on mobile

--- a/src/components/ImageSlider/styles.css
+++ b/src/components/ImageSlider/styles.css
@@ -10,7 +10,7 @@
 @media screen and (max-width: 900px) {
   .ImageSlider {
     width: 100%;
-    height: calc(100vh - 8.9rem);
+    height: calc(100vh - 13.7rem);
     justify-content: center;
   }
 }
